force-app/main/default/objects/PWChrono_Separation_Template_Activity__c/PWChrono_Separation_Template_Activity__c.object-meta.xml
<CustomObject>
    <label>Separation Template Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Separation Template Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>