force-app/main/default/objects/PWChrono_Separation_Template_Activity__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipName>Assigned_Template_Activities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>