force-app/main/default/objects/PWChrono_Separation_Template_Activity__c/fields/Begin_On_Day__c.field-meta.xml
<CustomField>
    <fullName>Begin_On_Day__c</fullName>
    <label>Begin On Day</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>