force-app/main/default/objects/PWChrono_Separation_Template_Activity__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration (Days)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>