force-app/main/default/objects/PWChrono_Separation_Template_Activity__c/fields/Separation_Template__c.field-meta.xml
<CustomField>
    <fullName>Separation_Template__c</fullName>
    <label>Separation Template</label>
    <type>MasterDetail</type>
    <referenceTo>PWChrono_Separation_Template__c</referenceTo>
    <relationshipName>Template_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>